[tool.poetry]
name = "gneji"
version = "0.1.0"
description = ""
authors = ["mohira <mohira@example.com>"]
readme = "README.md"
repository = "https://github.com/mohira/gneji"

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.46.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.1"
oauth2client = "^4.1.3"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
